--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content="0; url=https://squarethree.github.io/web/index.html">
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="refresh" content="0; url=https://squarethree.github.io/web/index.html">
+</head>
