--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://squarethree.github.io/web/index.html">
+    <meta http-equiv="refresh" content="0; url=https://squarethree.github.io/flutter_website/web/index.html">
 </head>
 </html>
